--- a/.github/workflows/initiate-aml-pipeline.yml
+++ b/.github/workflows/initiate-aml-pipeline.yml
@@ -1,4 +1,4 @@
-name: Create Azure Machine Learning workspace
+name: Trigger Azure Machine Learning pipeline
 
 on:
   workflow_dispatch:
@@ -26,6 +26,10 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{secrets.AZURE_CREDENTIALS}}
-    - name: Create Azure Machine Learning workspace
+    - name: Set Azure ML workspace as default
       run: |
-        az ml workspace create --name "${{ github.event.inputs.aml_workspace }}" --resource-group "${{ github.event.inputs.resource_group }}"
+        az configure --defaults group="${{ github.event.inputs.resource_group }}"
+        az configure --defaults workspace="${{ github.event.inputs.aml_workspace }}"
+    - name: Trigger Azure Machine Learning pipeline
+      run: |
+        az ml job create --file src/pipeline.yml
