--- a/.github/workflows/stop-compute-instance.yml
+++ b/.github/workflows/stop-compute-instance.yml
@@ -1,4 +1,4 @@
-name: Create Azure Machine Learning workspace
+name: Stop compute instance
 
 on:
   workflow_dispatch:
@@ -12,6 +12,11 @@ on:
         description: 'Azure Machine Learning workspace name'
         required: true
         default: 'mlw-dev-mlops' 
+        type: string
+      compute:
+        description: 'Azure Machine Learning compute instance name'
+        required: true
+        default: 'dev-vm-1' 
         type: string
 
 jobs:
@@ -28,4 +33,4 @@ jobs:
         creds: ${{secrets.AZURE_CREDENTIALS}}
     - name: Create Azure Machine Learning workspace
       run: |
-        az ml workspace create --name "${{ github.event.inputs.aml_workspace }}" --resource-group "${{ github.event.inputs.resource_group }}"
+        az ml compute stop -n "${{ github.event.inputs.compute }}" -w "${{ github.event.inputs.aml_workspace }}" -g "${{ github.event.inputs.resource_group }}"
