add pull request to action

--- a/.github/workflows/initiate-aml-pipeline.yml
+++ b/.github/workflows/initiate-aml-pipeline.yml
@@ -13,6 +13,10 @@ on:
         required: true
         default: 'mlw-dev-mlops' 
         type: string
+  pull_request:
+    branches:
+      - main
+      - 'releases/**'
 
 jobs:
   build:
