--- a/.github/workflows/initiate-aml-pipeline.yml
+++ b/.github/workflows/initiate-aml-pipeline.yml
@@ -1,18 +1,6 @@
 name: Trigger Azure Machine Learning pipeline
 
 on:
-  workflow_dispatch:
-    inputs:
-      resource_group:
-        description: 'Resource group name'
-        required: true
-        default: 'dev-aml-rg' 
-        type: string
-      aml_workspace:
-        description: 'Azure Machine Learning workspace name'
-        required: true
-        default: 'dev-aml-ws' 
-        type: string
   pull_request:
     branches:
       - main
@@ -32,8 +20,8 @@ jobs:
         creds: ${{secrets.AZURE_CREDENTIALS}}
     - name: Set Azure ML workspace as default
       run: |
-        az configure --defaults group="${{ github.event.inputs.resource_group }}"
-        az configure --defaults workspace="${{ github.event.inputs.aml_workspace }}"
+        az configure --defaults group="dev-aml-rg"
+        az configure --defaults workspace="dev-aml-ws"
     - name: Trigger Azure Machine Learning pipeline
       run: |
         az ml job create --file src/pipeline.yml
