--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -10,7 +10,9 @@ jobs:
     - name: Check out repo
       uses: actions/checkout@main
     - name: Use Python version 3.7
-      uses: actions/setup-python@v3.7
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.7'
     - name: Install Flake8
       run: |
         python -m pip install flake8
