--- a/.github/workflows/03-trigger-aml-pipeline.yml
+++ b/.github/workflows/03-trigger-aml-pipeline.yml
@@ -1,4 +1,4 @@
-name: Trigger Azure Machine Learning pipeline
+name: Trigger Azure Machine Learning pipeline by merging pull request
 
 on:
   pull_request:
