--- a/.github/workflows/05-environments.yml
+++ b/.github/workflows/05-environments.yml
@@ -1,4 +1,4 @@
-name: Trigger Azure Machine Learning pipeline
+name: Train a model in dev environment
 
 on:
   workflow_dispatch:
@@ -29,3 +29,17 @@ jobs:
     - name: Trigger Azure Machine Learning pipeline
       run: |
         az ml job create --file src/pipeline.yml
+  deployment:
+    runs-on: ubuntu-latest
+    environment:
+      name: prod
+    steps:
+    - name: Install az ml extension
+      run: az extension add -n ml -y
+    - name: Azure login
+      uses: azure/login@v1
+      with:
+        creds: ${{secrets.AZURE_CREDENTIALS}}
+    - name: List model
+      run: |
+        az ml model list
