--- a/.github/workflows/02-manual-aml-pipeline.yml
+++ b/.github/workflows/02-manual-aml-pipeline.yml
@@ -7,18 +7,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Check out repo
-      uses: actions/checkout@main
-    - name: Install az ml extension
-      run: az extension add -n ml -y
-    - name: Azure login
-      uses: azure/login@v1
-      with:
-        creds: ${{secrets.AZURE_CREDENTIALS}}
-    - name: Set Azure ML workspace as default
+    - name: Placeholder
       run: |
-        az configure --defaults group="dev-aml-rg"
-        az configure --defaults workspace="dev-aml-ws"
-    - name: Trigger Azure Machine Learning pipeline
-      run: |
-        az ml job create --file src/pipeline.yml
+        echo "hello"
